# math-functions

./: :w  Cargo.toml  README.md
src/: context.rs  functions.rs  lib.rs  main.rs  matrix.rs  operations.rs  operators.rs  parser.rs  polynomials.rs  splitter.rs  tests.rs
src/algebra/: matrix.rs  mod.rs  polynomials.rs.rs  rational.rs
src/algebra/polynomials/: mod.rs  operators.rs
src/functions/: context.rs  operators.rs  parser.rs  splitter.rs  tests.rs
src/parser/: mod.rs.rs  parser.rs  parser.rs.rs  splitter.rs
