[package]
name = "math-functions"
author = "Ludovico Furlanetto"
description = "A math library that allows for parsing functions from string and perform integration, derivation and evaluation. Also supports functions with 2 and 3 variables"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
